--- a/CSSTASK/TASK1.html
+++ b/CSSTASK/TASK1.html
@@ -7,7 +7,7 @@
     <style>
         .container{
             width: 320px;
-            margin: auto;
+            margin: 0 auto;
         }
         .item{
             float:left;
@@ -16,7 +16,6 @@
             background-color: orange;
             margin: 2px;
             border-radius: 5px;
-
         }
     </style>
 </head>
