--- a/CSSTASK/TASK3.html
+++ b/CSSTASK/TASK3.html
@@ -28,28 +28,31 @@
             width:20%;
             position: absolute;
             left:3%;
-            top:15%;
+            top:30%;
         }
         .pre img{
-            width:20%;
-            max-width:20px;
+            width:100%;
+            max-width:14px;
         }
         .pre a{
             color: #ffffff;
             text-decoration: none;
-            font-size:2rem;
+            font-size:2em;
             position: absolute;
-            left:25%;
+            left:16%;
+            top:10%;
         }
         h1{
-            font-size:400%;
+            font-size:300%;
             text-align: center;
-
+            padding:10px;
         }
         .more{
             position: absolute;
-            right:10px;
-            top:20px;
+            right:4%;
+            top:48%;
+            width:3.6%;
+
         }
         .main{
             width:100%;
@@ -58,11 +61,13 @@
         .back{
             padding-left:5%;
             padding-top:3%;
+            width:8%;
         }
         .logo{
             display:block;
             margin-left:33%;
             padding-top:10%;
+            width:30%;
         }
         .main p{
             margin: 0 auto;
@@ -74,11 +79,13 @@
             float:left;
             padding-left:16%;
             padding-bottom:20%;
+            width:16%
         }
         .right{
             float:right;
             padding-right:16%;
             padding-bottom:20%;
+            width:16%;
         }
         .block{
             clear:both;
@@ -93,9 +100,7 @@
             <a href="#">返回</a>
         </div>
         <h1>魔镜</h1>
-        <div class="more">
-            <img src="images/more.png" alt="">
-        </div>
+        <img class="more" src="images/more.png" alt="">
     </div>
     <div class="main">
         <img class="back" src="images/back.png" alt="">
