--- a/CSSTASK/TASK3/TASK3.html
+++ b/CSSTASK/TASK3/TASK3.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--实现页面大小为640*1136的自适应布局-->
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title></title>
     <style type="text/css">
@@ -12,15 +13,19 @@
         body{
             color: #ffffff;
             font-size:62.5%;
+            font-family: "Hiragino Sans GB W3";
         }
         .container{
             max-width: 640px;
             width: 100%;
+            max-height:1136px;
             margin: 0 auto;
             background-color: #68cdd5;
         }
         .header{
             width:100%;
+            height:100%;
+            max-height:128px;
             position: relative;
             background-color: #000000;
         }
@@ -28,27 +33,28 @@
             width:20%;
             position: absolute;
             left:3%;
-            top:30%;
+            top:40%;
         }
         .pre img{
             width:100%;
-            max-width:14px;
+            max-width:20px;
         }
         .pre a{
             color: #ffffff;
             text-decoration: none;
-            font-size:2em;
+            font-size:260%;
             position: absolute;
             left:16%;
             top:10%;
         }
         h1{
-            font-size:300%;
+
+            font-size:340%;
             text-align: center;
-            padding:10px;
+            padding:8%;
         }
         .more{
-            position: absolute;
+
             right:4%;
             top:48%;
             width:3.6%;
