--- a/CSSTASK/TASK3/TASK3.html
+++ b/CSSTASK/TASK3/TASK3.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <!--实现页面大小为640*1136的自适应布局-->
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
     <title></title>
     <style type="text/css">
         *{
@@ -14,6 +14,13 @@
             color: #ffffff;
             font-size:62.5%;
             font-family: "Hiragino Sans GB W3";
+        }
+        @media only screen and (max-width: 500px) {
+            body{
+                color: #ffffff;
+                font-size:31.25%;
+                font-family: "Hiragino Sans GB W3";
+            }
         }
         .container{
             max-width: 640px;
@@ -28,9 +35,10 @@
             max-height:128px;
             position: relative;
             background-color: #000000;
+
         }
         .pre{
-            width:20%;
+            width:3.125%;
             position: absolute;
             left:3%;
             top:40%;
@@ -39,13 +47,13 @@
             width:100%;
             max-width:20px;
         }
-        .pre a{
+        a{
             color: #ffffff;
             text-decoration: none;
             font-size:260%;
             position: absolute;
-            left:16%;
-            top:10%;
+            left:7.8%;
+            top:44%;
         }
         h1{
 
@@ -54,44 +62,76 @@
             padding:8%;
         }
         .more{
-
-            right:4%;
-            top:48%;
-            width:3.6%;
+            position: absolute;
+            right:3%;
+            top:50%;
+            width:5.6%;
 
         }
+        .more img{
+            width:100%;
+            max-width:36px;
+        }
+        /*以上完成header自适应布局*/
         .main{
             width:100%;
+            height:100%;
+
+            max-height:1008px;
             position:relative;
         }
         .back{
-            padding-left:5%;
+            padding-left:5.3%;
             padding-top:3%;
-            width:8%;
+            width:9%;
         }
         .logo{
             display:block;
             margin-left:33%;
-            padding-top:10%;
+            margin-top:10%;
             width:30%;
         }
-        .main p{
+        .content{
             margin: 0 auto;
             line-height:180%;
-            font-size:200%;
-            padding:16%;
+            font-size:300%;
+            padding:14%;
         }
         .left{
             float:left;
-            padding-left:16%;
-            padding-bottom:20%;
-            width:16%
+            padding-top:14%;
+            padding-left:21.875%;
+            padding-bottom:30%;
+            width:13.75%
+        }
+        .left img{
+            width:100%;
+            max-width:84px;
+        }
+        .num{
+            position: absolute;
+            font-size:240%;
+            margin-left:20%;
+            margin-top:30%;
+
         }
         .right{
             float:right;
-            padding-right:16%;
-            padding-bottom:20%;
-            width:16%;
+            padding-top: 14%;
+            padding-right:21.875%;
+            padding-bottom:30%;
+            width:13.75%;
+        }
+        .right img{
+            width:100%;
+            max-width:84px;
+        }
+        .ptt{
+            position: absolute;
+            font-size:240%;
+            margin-left:63%;
+            margin-top:30%;
+
         }
         .block{
             clear:both;
@@ -103,17 +143,25 @@
     <div class="header">
         <div class="pre">
             <img src="images/pre.png" alt="">
-            <a href="#">返回</a>
         </div>
+        <a href="#">返回</a>
         <h1>魔镜</h1>
-        <img class="more" src="images/more.png" alt="">
+        <div class="more">
+            <img src="images/more.png" alt="">
+        </div>
     </div>
     <div class="main">
         <img class="back" src="images/back.png" alt="">
         <img class="logo" src="images/logo.png" alt="">
-        <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。</p>
-        <img class="left" src="images/left-icon.png" alt="">
-        <img class="right" src="images/right-icon.png" alt="">
+        <p class="content">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。</p>
+        <div class="left">
+            <img src="images/left-icon.png" alt="">
+        </div>
+        <p class="num">290560933</p>
+        <div class="right">
+            <img src="images/right-icon.png" alt="">
+        </div>
+        <p class="ptt">BJPTTeng</p>
         <div class="block"></div>
     </div>
 </div>
