--- a/CSSTASK/TASK4/TASK4.html
+++ b/CSSTASK/TASK4/TASK4.html
@@ -2,24 +2,182 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>Title</title>
+    <style type="text/css">
+        *{
+            margin:0;
+            padding:0;
+        }
+        body{
+            font-family:"Hiragino Sans GB W3";
+            font-size:62.5%;
+        }
+        @media only screen and (max-width: 500px) {
+            body{
+                font-size:31.25%;
+                font-family: "Hiragino Sans GB W3";
+            }
+        }
+        .container{
+            width:100%;
+            max-width:640px;
+            background-color: #29bde0;
+            margin:0 auto;
+        }
+        .header{
+            width:100%;
+            position: relative;
+            height:100%;
+            max-height:128px;
+        }
+        .home{
+            position: absolute;
+            top:50%;
+            left:3.125%;
+            width:8%;
+        }
+        .home img{
+            width:100%;
+            max-width:51px;
+        }
+        .header h1{
+            padding:12%;
+            text-align: center;
+            font-size:340%;
+            color: #ffffff;
+        }
+        .warn{
+            position: absolute;
+            top:50%;
+            right:3.125%;
+            width:6.25%;
+        }
+        .warn img{
+            width:100%;
+            max-width:40px;
+        }
+        .main{
+
+        }
+        .win{
+            display: block;
+            width:55.625%;
+            margin:0 auto;
+            padding-top: 3.45%;
+        }
+        .tip1{
+            font-weight:bold;
+            font-size:330%;
+            color: #ffc865;
+            padding-top:3.125%;
+            margin:0 11.7%;
+        }
+        .tip2{
+            color: #ffffff;
+            font-size:260%;
+            margin-left:11.7%;
+            margin-bottom:3.125%;
+            padding-top:8.75%;
+        }
+        .detail{
+            background-color:#ffffff;
+        }
+        .day{
+            position: relative;
+            padding-top:2%;
+            margin-left:11.7%;
+            padding-bottom:5%;
+        }
+        .day h1{
+            font-size:300%;
+            color: #515151;
+
+        }
+        .day span{
+            position: absolute;
+            right:15.625%;
+            top:15%;
+            font-size:200%;
+            color: #c7c7c7;
+        }
+        .day p{
+            font-size:260%;
+            color: #a6a6a6;
+
+            line-height:150%;
+        }
+        .footer{
+            position:fixed;
+            bottom:0;
+            background:rgba(153,223,240,0.8);
+            font-size:400%;
+            width:100%;
+            max-width:640px;
+        }
+        .again{
+            background-color: #f66f6f;
+            padding:5% 8.75%;
+            float: left;
+            margin-top:3.125%;
+            margin-left:3.125%;
+            margin-bottom:3.125%;
+            -webkit-border-radius:10px;
+            -moz-border-radius:10px;
+            border-radius:10px;
+        }
+        .share{
+            background-color: #fbb435;
+            padding:5% 8%;
+            float: right;
+            margin-top:3.125%;
+            margin-right:3.125%;
+            margin-bottom:3.125%;
+            -webkit-border-radius:10px;
+            -moz-border-radius:10px;
+            border-radius:10px;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
     <div class="header">
         <div class="home"><img src="images/home.png" alt=""></div>
-        <h1>游戏结果</h1>
         <div class="warn"><img src="images/warn.png" alt=""></div>
+        <h1>游戏结果</h1>
     </div>
     <div class="main">
-        <img src="images/win.png" alt="">
-        <p>太棒了!你知道么？在捉鬼游戏中 只有20%的卧底取得游戏最终的 胜利哦！</p>
-        <p>本次游戏共计用时0小时25分钟 杀   手0人 警   察1人 平   民6人狙击手0人医   生1人 卧底词汇：爱新觉罗 水民词汇：努尔哈赤   </p>
+        <img class="win" src="images/win.png" alt="">
+        <p class="tip1">太棒了!你知道么？在捉鬼游戏中 只有20%的卧底取得游戏最终的胜利哦！</p>
+        <div>
+            <p class="tip2">本次游戏共计用时0小时25分钟<br/> 杀       手0人 警   察1人 平   民6人<br/>狙击手0人医    生1人 <br/>卧底词汇：爱新觉罗 <br/>水民词汇：努尔哈赤   </p>
+        </div>
     </div>
-</div>
-<div>
-    <p>第一天</p>
-    <p>晚上：5号被杀手杀死，5号是水民   白天：8号被全民投票投死，8号是杀手</p>
+    <div class="detail">
+        <div class="day">
+            <h1>第一天</h1>
+            <span>0小时07分</span>
+            <p>晚上：5号被杀手杀死，5号是水民
+                <br/>白天：8号被全民投票投死，8号是杀手
+            </p>
+        </div>
+        <hr/>
+        <div class="day">
+            <h1>第二天</h1>
+            <span>0小时07分</span>
+            <p>晚上：5号被杀手杀死，5号是水民 <br/>  白天：8号被全民投票投死，8号是杀手</p>
+        </div>
+        <hr/>
+        <div class="day">
+            <h1>第三天</h1>
+            <span>0小时07分</span>
+            <p>晚上：5号被杀手杀死，5号是水民 <br/>  白天：8号被全民投票投死，8号是杀手</p>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="again">再来一局</div>
+        <div class="share">上传并分享</div>
+    </div>
 </div>
 </body>
 </html>
