--- a/CSSTASK/TASK5/TASK5.html
+++ b/CSSTASK/TASK5/TASK5.html
@@ -13,6 +13,12 @@
             font-size:62.5%;
             font-family:"Hiragino Sans GB W3";
         }
+        @media only screen and (max-width: 500px) {
+            body{
+                font-size:31.25%;
+                font-family: "Hiragino Sans GB W3";
+            }
+        }
         .container{
             width:100%;
             max-width:640px;
@@ -48,6 +54,8 @@
             position: absolute;
             right:3%;
             top:33.33%;
+            width:4.2%;
+            max-width:23px;
         }
         .content{
             position: relative;
@@ -78,11 +86,15 @@
         .more{
             display: block;
             margin:2% auto;
+            width:15%;
+            max-width:93px;
         }
         .next{
             position: absolute;
             right:2%;
             top:50%;
+            width:5%;
+            max-width:28px;
         }
     </style>
 </head>
