--- a/CSSTASK/TASK5/TASK5.html
+++ b/CSSTASK/TASK5/TASK5.html
@@ -28,7 +28,7 @@
             overflow: hidden;
         }
         #nav{
-            width:78.125%;
+            width:100%;
             background-color: #ffffff;
             position: absolute;
             top:0;
@@ -40,13 +40,13 @@
             font-size:300%;
             padding:5% 0;
             border-bottom:1px solid #c9c9c9;
-            text-indent:25%;
+            text-indent:20%;
         }
         #nav li img{
             width:5.2%;
             max-width:26px;
             float:right;
-            margin-right:31.25%;
+            margin-right:40%;
         }
         .notice{
             background: url(images/notice.png) no-repeat 7%;
@@ -157,6 +157,7 @@
 <div class="wrap">
     <input id="menu" type="checkbox">
     <div id="nav">
+        <div class="header"></div>
         <ul>
             <li class="notice">公告<img src="images/enter.png" alt=""></li>
             <li class="set">设置<img src="images/enter.png" alt=""></li>
