--- a/CSSTASK/TASK6/TASK6.html
+++ b/CSSTASK/TASK6/TASK6.html
@@ -17,8 +17,10 @@
         .container{
             width:100%;
             max-width:640px;
+            max-height:1136px;
             background-color: #29bde0;
             margin:0 auto;
+            overflow: auto;
         }
         .header{
             width:100%;
@@ -45,6 +47,38 @@
             font-size:340%;
             padding:10%;
         }
+        .main{
+            width:100%;
+        }
+        h2{
+            font-size:260%;
+            color: #000;
+            padding:5% 0 5% 10%;
+            background: #b9e9f5 url(images/play.png) no-repeat 90% 50%;
+        }
+        .tell{
+            font-size:240%;
+            margin:5% 0 5% 15%;
+        }
+        .box{
+            width:21.8%;
+            padding:8.8% 0;
+            border:5px solid #ffffff;
+            float: left;
+            margin:3%;
+            background: #f5c97b;
+        }
+        .footer{
+            clear: both;
+        }
+        .quit{
+            margin:0 auto;
+            width:70%;
+            padding:5%;
+            background: #fbb435;
+            text-align: center;
+            font-size:400%;
+        }
     </style>
 </head>
 <body>
@@ -55,10 +89,59 @@
         <h1>投票</h1>
     </div>
     <div class="main">
-
+        <h2>发言讨论结束，请大家投票</h2>
+        <div class="tell">点击得票数最多人的头像</div>
+            <div class="box">
+                <p>水民</p>
+                <div class="num">1号</div>
+            </div>
+            <div class="box">
+                <p>水民</p>
+                <div class="num">2号</div>
+            </div>
+            <div class="box">
+                <p>警察</p>
+                <div class="num">3号</div>
+            </div>
+            <div class="box">
+                <p>法官</p>
+                <div class="num">4号</div>
+            </div>
+            <div class="box">
+                <p>狙击手</p>
+                <div class="num">5号</div>
+            </div>
+            <div class="box">
+                <p>医生</p>
+                <div class="num">6号</div>
+            </div>
+            <div class="box">
+                <p>杀手</p>
+                <div class="num">7号</div>
+            </div>
+            <div class="box">
+                <p>水民</p>
+                <div class="num">8号</div>
+            </div>
+            <div class="box">
+                <p>水民</p>
+                <div class="num">9号</div>
+            </div>
+            <div class="box">
+                <p>水民</p>
+                <div class="num">10号</div>
+            </div>
+            <div class="box">
+                <p>水民</p>
+                <div class="num">11号</div>
+            </div>
+            <div class="box">
+                <p>水民</p>
+                <div class="num">12号</div>
+            </div>
     </div>
     <div class="footer">
-
+        <div class="quit">投死</div>
     </div>
 </div>
 </body>
