--- a/CSSTASK/TASK1/TASK1.html
+++ b/CSSTASK/TASK1/TASK1.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <title>九宫格页面</title>
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <title>TASK1-九宫格页面</title>
     <style type="text/css">
         * {
              -webkit-box-sizing: border-box;
              -moz-box-sizing: border-box;
             box-sizing: border-box;
         }
+        html{
+            font-size:10px;
+        }
         .container{
-            max-width: 36em;
+            max-width: 36rem;
             width: 100%;
             margin: 0 auto;
         }
@@ -21,9 +24,9 @@
             padding:15.67% 0;
             background-color: orange;
             margin:1%;
-            border-radius: 1em;
-             -webkit-border-radius: 1em;
-             -moz-border-radius: 1em;
+            border-radius: 1rem;
+             -webkit-border-radius: 1rem;
+             -moz-border-radius: 1rem;
         }
     </style>
 </head>
