--- a/CSSTASK/TASK6/TASK6.html
+++ b/CSSTASK/TASK6/TASK6.html
@@ -4,82 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>TASK6</title>
-    <style type="text/css">
-        *{
-            margin:0;
-            padding:0;
-        }
-        body{
-            font-size:62.5%;
-            font-family:"Hiragino Sans GB W3";
-            color: #ffffff;
-        }
-        .container{
-            width:100%;
-            max-width:640px;
-            max-height:1136px;
-            background-color: #29bde0;
-            margin:0 auto;
-            overflow: auto;
-        }
-        .header{
-            width:100%;
-            max-height:128px;
-            position: relative;
-
-        }
-        .menu{
-            padding:10%;
-            background: url(images/menu.png) no-repeat 0 70%;
-            background-size: 31.25%;
-            position: absolute;
-            left:3%;
-        }
-        .close{
-            padding:10%;
-            background: url(images/close.png) no-repeat 100% 70%;
-            background-size: 31.25%;
-            position: absolute;
-            right:3%;
-        }
-        h1{
-            text-align: center;
-            font-size:340%;
-            padding:10%;
-        }
-        .main{
-            width:100%;
-        }
-        h2{
-            font-size:260%;
-            color: #000;
-            padding:5% 0 5% 10%;
-            background: #b9e9f5 url(images/play.png) no-repeat 90% 50%;
-        }
-        .tell{
-            font-size:240%;
-            margin:5% 0 5% 15%;
-        }
-        .box{
-            width:21.8%;
-            padding:8.8% 0;
-            border:5px solid #ffffff;
-            float: left;
-            margin:3%;
-            background: #f5c97b;
-        }
-        .footer{
-            clear: both;
-        }
-        .quit{
-            margin:0 auto;
-            width:70%;
-            padding:5%;
-            background: #fbb435;
-            text-align: center;
-            font-size:400%;
-        }
-    </style>
+    <link rel="stylesheet" TYPE="text/css" href="TASK6.css">
 </head>
 <body>
 <div class="container">
@@ -91,54 +16,78 @@
     <div class="main">
         <h2>发言讨论结束，请大家投票</h2>
         <div class="tell">点击得票数最多人的头像</div>
+        <div class="layout">
             <div class="box">
                 <p>水民</p>
                 <div class="num">1号</div>
             </div>
+        </div>
+        <div class="layout">
             <div class="box">
                 <p>水民</p>
                 <div class="num">2号</div>
             </div>
+        </div>
+        <div class="layout">
             <div class="box">
                 <p>警察</p>
                 <div class="num">3号</div>
             </div>
+        </div>
+        <div class="layout">
             <div class="box">
                 <p>法官</p>
                 <div class="num">4号</div>
             </div>
+        </div>
+        <div class="layout">
             <div class="box">
                 <p>狙击手</p>
                 <div class="num">5号</div>
             </div>
+        </div>
+        <div class="layout">
             <div class="box">
                 <p>医生</p>
                 <div class="num">6号</div>
             </div>
+        </div>
+        <div class="layout">
             <div class="box">
                 <p>杀手</p>
                 <div class="num">7号</div>
             </div>
+        </div>
+        <div class="layout">
             <div class="box">
                 <p>水民</p>
                 <div class="num">8号</div>
             </div>
+        </div>
+        <div class="layout">
             <div class="box">
                 <p>水民</p>
                 <div class="num">9号</div>
             </div>
+        </div>
+        <div class="layout">
             <div class="box">
                 <p>水民</p>
                 <div class="num">10号</div>
             </div>
+        </div>
+        <div class="layout">
             <div class="box">
                 <p>水民</p>
                 <div class="num">11号</div>
             </div>
+        </div>
+        <div class="layout">
             <div class="box">
                 <p>水民</p>
                 <div class="num">12号</div>
             </div>
+        </div>
     </div>
     <div class="footer">
         <div class="quit">投死</div>
