--- a/CSSTASK/TASK6/TASK6.html
+++ b/CSSTASK/TASK6/TASK6.html
@@ -21,6 +21,12 @@
                 <p>水民</p>
                 <div class="num">1号</div>
             </div>
+            <ul>
+                <li class="cat-1"><i></i></li>
+                <li class="cat-2"><i></i></li>
+                <li class="cat-3"><i></i></li>
+                <li class="cat-4"><i></i></li>
+            </ul>
         </div>
         <div class="layout">
             <div class="box">
@@ -88,6 +94,7 @@
                 <div class="num">12号</div>
             </div>
         </div>
+        <div class="clear"></div>
     </div>
     <div class="footer">
         <div class="quit">投死</div>
